--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -25,6 +25,11 @@
         url('../fonts/Montserrat/montserrat-v25-latin_cyrillic-700.woff') format('woff');
 }
 
+/* Container */
+
+.container {
+    margin: 0 auto;
+}
 
 /* Header */
 
