try fix mobile again

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -141,7 +141,7 @@
 }
 
 .create-wrapper {
-    max-width: 1160px;
+    width: 1160px;
     padding: 379px 0 243px 0;
     display: flex;
     flex-direction: column;
@@ -377,7 +377,7 @@
 .buy__install-wrapper {
     margin: 0 auto;
     padding: 127px 0;
-    max-width: 1160px;
+    width: 1160px;
     display: flex;
     flex-direction: column;
     align-items: center;
