--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -47,7 +47,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1160px;
+    max-width: 1160px;
 }
 
 .header__logo {
@@ -141,7 +141,7 @@
 }
 
 .create-wrapper {
-    width: 1160px;
+    max-width: 1160px;
     padding: 379px 0 243px 0;
     display: flex;
     flex-direction: column;
@@ -261,7 +261,8 @@
 
 .section-wrapper {
     padding: 83px 0 91px 0;
-    width: 1160px;
+    max-width: 1160px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -377,7 +378,8 @@
 .buy__install-wrapper {
     margin: 0 auto;
     padding: 127px 0;
-    width: 1160px;
+    max-width: 1160px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -594,7 +596,8 @@
 
 .news__tabs-grid {
     margin-top: 68px;
-    width: 1160px;
+    max-width: 1160px;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 35px;
@@ -675,7 +678,8 @@
 }
 
 .people {
-    width: 1160px;
+    max-width: 1160px;
+    width: 100%;
 }
 
 .people.services-title {
@@ -858,11 +862,13 @@
 
 .grid {
     margin-top: 83px;
-    width: 1160px;
+    max-width: 1160px;
+    width: 100%;
 }
 
 .grid-item {
-    width: 373px;
+    max-width: 373px;
+    width: 100%;
     float: left;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -874,7 +880,8 @@
 }
 
 .grid-item--gigante {
-    width: 766px;
+    max-width: 766px;
+    width: 100%;
     z-index: 2;
 }
 
