--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -47,7 +47,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1160px;
+    width: 1160px;
 }
 
 .header__logo {
@@ -141,7 +141,7 @@
 }
 
 .create-wrapper {
-    max-width: 1160px;
+    width: 1160px;
     padding: 379px 0 243px 0;
     display: flex;
     flex-direction: column;
@@ -261,8 +261,7 @@
 
 .section-wrapper {
     padding: 83px 0 91px 0;
-    max-width: 1160px;
-    width: 100%;
+    width: 1160px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -378,8 +377,7 @@
 .buy__install-wrapper {
     margin: 0 auto;
     padding: 127px 0;
-    max-width: 1160px;
-    width: 100%;
+    width: 1160px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -596,8 +594,7 @@
 
 .news__tabs-grid {
     margin-top: 68px;
-    max-width: 1160px;
-    width: 100%;
+    width: 1160px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 35px;
@@ -678,8 +675,7 @@
 }
 
 .people {
-    max-width: 1160px;
-    width: 100%;
+    width: 1160px;
 }
 
 .people.services-title {
@@ -862,13 +858,11 @@
 
 .grid {
     margin-top: 83px;
-    max-width: 1160px;
-    width: 100%;
+    width: 1160px;
 }
 
 .grid-item {
-    max-width: 373px;
-    width: 100%;
+    width: 373px;
     float: left;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -880,8 +874,7 @@
 }
 
 .grid-item--gigante {
-    max-width: 766px;
-    width: 100%;
+    width: 766px;
     z-index: 2;
 }
 
